--- a/src/app/CSS/HomeCard.css
+++ b/src/app/CSS/HomeCard.css
@@ -1,6 +1,13 @@
 /* From Uiverse.io by SouravBandyopadhyay */ 
+.card-wrapper{
+
+  max-width: 600px;
+  flex: 1 1 400px;
+}
+
+
 .card-title {
-    color: #262626;
+  color: #262626;
     font-size: 32px;
     line-height: normal;
     font-weight: 700;
@@ -42,8 +49,8 @@
   .card {
     display: block;
     position: relative;
-    width: 400px;
-    max-height: 320px;
+    width: 100%;
+    height: 350px;
     background-color: #f2f8f9;
     border-radius: 10px;
     padding: 2em 1.2em;
