--- a/src/app/CSS/PcCard.css
+++ b/src/app/CSS/PcCard.css
@@ -1,7 +1,7 @@
 /* From Uiverse.io by MikeAndrewDesigner */ 
 .e-card {
     cursor: pointer;
-    margin: 100px auto;
+    margin: 0 auto;
     background: transparent;
     box-shadow: 0px 8px 28px -9px rgba(0,0,0,0.45);
     position: relative;
