--- a/src/app/CSS/Card.css
+++ b/src/app/CSS/Card.css
@@ -6,7 +6,6 @@
     transition: 0.4s;
     box-shadow: 0px 0px 10px 5px  rgba(0, 0, 0, 0.705);
     font-size: 30px;
-    font-weight: 900;
     overflow: hidden;
     position: relative;
   }
@@ -14,7 +13,7 @@
   .card:hover {
     cursor: pointer;
     box-shadow: 0px 0px 10px 5px  rgba(0, 0, 0, 0.705);
-    background: rgb(103, 151, 255);
+    background: rgb(17, 24, 39);
   }
   
   .first-content {
@@ -53,11 +52,12 @@
   }
 
   .name{
-    position: absolute;
-    font-size: 16px;
-    background-color: white;
-    color: black;
-    padding: 7px 12px;
-    border-bottom-right-radius: 6px;
+    position: absolute !important;
+    font-size: 16px !important;
+    background-color: white !important;
+    color: black !important;
+    padding: 7px 12px !important;
+    border-bottom-right-radius: 6px !important;
+    font-weight:700 !important;
   }
   
