--- a/src/app/CSS/Nav.css
+++ b/src/app/CSS/Nav.css
@@ -99,4 +99,44 @@ a {
     background-color: white;
     transform: translateY(-50%);
   }
+
+  nav{
+    overflow: hidden;
+  }
+
+  nav li {
+    position: relative;
+    /* overflow: hidden; */
+    cursor: pointer;
+
+    &::before{
+        position: absolute;
+        content:"";
+        width: 100%;
+        height: 100%;
+        transform:translateY(100%);
+        background-color: oklch(21% 0.034 264.665);
+        transition: 300ms;
+
+    }
+    &:hover::before{
+        transform: translateY(70%);
+        transition: 300ms;
+    }
+
+    &:hover span{
+        /* color: white; */
+        transition: 300ms;
+    }
+
+    
+
+  }
+
+
+
+
+  nav span{
+    transition: 300ms;
+  }
   
